Added function for display without problem

--- a/lib/tools/Makefile
+++ b/lib/tools/Makefile
@@ -9,14 +9,11 @@ CC	=	gcc
 
 CFLAGS	=	-Wall -Wextra -W -I ../../include/
 
-SRC	=	my_strlen.c		\
-		my_putchar.c		\
+SRC	=	my_putchar.c		\
 		my_getnbr.c		\
-		my_strcpy.c		\
 		my_str_isnum.c		\
 		my_putstr.c		\
-		my_put_nbr.c		\
-		my_strcat.c
+		my_put_nbr.c
 
 OBJ	=	$(SRC:.c=.o)
 
